--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="timeline-date">2019</div>
                 <div class="timeline-content">
                     <h3>University</h3>
-                    <p>I am pursuing my B.tech form GALGOTIAS UNIVERSITY form, Greater Nioda, Utter Pradesh.<BR>
+                    <p>I am pursuing my B.tech form GALGOTIAS UNIVERSITY form, Greater Nioda, Uttar Pradesh.<BR>
                         76.7%
                     </p>
                 </div>
