--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="timeline-content">
                     <h3>Diploma</h3>
                     <p>I have my Diploma from CENTRAL INSTITUTE OF PETROCHEMICALS ENGINEERING AND TECHNOLOGY from
-                        ,Ranchi, Jharkhand </p>
+                        Ranchi, Jharkhand </p>
                 </div>
             </div>
 
@@ -83,7 +83,7 @@
                 <div class="timeline-date">2025</div>
                 <div class="timeline-content">
                     <h3>High School</h3>
-                    <p>I have completed my 10th from OXFORD PUBLIC SCHOOL from, Ranchi Jharkhand</p>
+                    <p>I have completed my 10th from OXFORD PUBLIC SCHOOL from Ranchi, Jharkhand</p>
                 </div>
             </div>
 
@@ -119,8 +119,8 @@
 
             <div class="service-box">
                 <div class="service-info">
-                    <h4>Frontend Design</h4>
-                    <p>Frontend design refers to the process of creating the visual structure and interactive elements of a website or web application that users see and interact with in their browser. Includes HTML, CSS, JavaScript, React.</p>
+                    <h4>Data Engineering</h4>
+                    <p>Data engineering is the discipline of designing and building systems that enable the collection, storage, processing, and analysis of data, often at a large scale.</p>
                 </div>
             </div>
 
