--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
         <div class="home-content">
             <h1>Hi, It's <span>Gaurav Nishad</span></h1>
             <h3 class="text-animation">I'm a <span></span></h3>
-            <p>"Motivated and detail-oriented B.Tech graduate looking for a good positioning in IT Companies for
-                Frontend Developer. Eager to apply my skills like HTML, CSS, JavaScript, Excel etc. skills developed
-                through academic projects and internships. Dedicated to contribute to the success of the Company by my
-                fresh ideas, a strong work ethic, and a passion for continuous learning."</p>
+            <p>"MMotivated and detail-oriented B.Tech graduate looking for a good positioning in IT Companies for Web Developer and Data Engineering.
+                Eager to apply my skills like Excel, SQL ,Power BI etc. skills developed through academic projects and internships. 
+                Dedicated to contribute to the success of the Company by my fresh ideas, a strong work ethic, and a passion for continuous learning."</p>
 
             <div class="social-icons">
                 <a href="https://github.com/dashboard"><i class='bx bxl-github'></i></a>
@@ -107,34 +106,34 @@
     </section>
 
     <section class="services" id="services">
-        <h2 class="heading">Services</h2>
+        <h2 class="heading">Project</h2>
 
         <div class="services-container">
             <div class="service-box">
                 <div class="service-info">
-                    <h4>Web Design</h4>
-                    <p>Web design is the process of planning, creating, and arranging the visual and interactive elements of a website. It focuses on how a website looks and feels, and to some extent, how it functions from a user's perspective. Languages HTML, CSS, JavaScript</p>
+                    <h4>Data Analyst</h4>
+                    <p>Developed an interactive Pizza Sales Dashboard using Excel: Implemented dynamic charts, slicers, and filters to track sales performance and visualize KPIs such as revenue, top-selling pizzas, and order frequency.  </p>
                 </div>
             </div>
 
             <div class="service-box">
                 <div class="service-info">
-                    <h4>Data Engineering</h4>
-                    <p>Data engineering is the discipline of designing and building systems that enable the collection, storage, processing, and analysis of data, often at a large scale.</p>
+                    <h4>Digital Market Place</h4>
+                    <p>Developed using HTML, CSS, JavaScript, Django and Python. Also Publish Research Paper</p>
                 </div>
             </div>
 
             <div class="service-box">
                 <div class="service-info">
-                    <h4>Digital Marketing</h4>
-                    <p>Digital Marketing is the use of online channels and digital technologies to promote products, services, or brands to reach and engage with potential customers. Using SEO, Canvas,Backlinking etc.</p>
+                    <h4>IPL Dashbord </h4>
+                    <p>Created an interactive IPL Dashboard using Power BI to analyze team and player performance, providing actionable insights through dynamic visualizations</p>
                 </div>
             </div>
 
             <div class="service-box">
                 <div class="service-info">
-                    <h4>Video Editing</h4>
-                    <p>Video editing is the process of manipulating and arranging video clips to create a final, polished video. This can involve cutting scenes, adding music or sound effects, inserting text or transitions, adjusting color, and more.</p>
+                    <h4>Humidity and Temperature Monitoring System</h4>
+                    <p>Implemented using Arduino and Ethernet Shield.</p>
                 </div>
             </div>
         </div>
@@ -172,8 +171,8 @@
 
                             </div>
                             <p>
-                                    Face emotion detection,<br>
-                                    Humidity and Temperature Monitoring System,<br>
+                                    Pizza Dashbord,<br>
+                                    IPL Dashbord<br>
                                     Digital Marketplace etc.
                             </p>
                         </div>
@@ -238,3 +237,4 @@
 </body>
 
 </html>
+
