--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#education">Education</a>
-            <a href="#services">Services</a>
+            <a href="#services">Projests</a>
             <a href="#skills">Skills/Projects</a>
             <a href="#contact">Contact</a>
         </nav>
@@ -237,4 +237,5 @@
 </body>
 
 </html>
+
 
