--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <div class="rating">
 
                     </div>
-                    <p>Core JAVA, HTML, CSS, JavaScript,<br> MS Office, Adobe Photoshop, Canvas,<br>Basic Networking, Figma Basic, Excel,<br> Digital Marketing, SEO (On-page, Off-page)</p>
+                    <p> Excel, SQL, Power Bi, Python<br> MS Office, Adobe Photoshop, ChatGPT,<br>Core JAVA, HTML, CSS, JavaScript<br>Canvas, Digital Marketing</p>
                 </div>
 
                 <div class="wrapper">
@@ -237,5 +237,6 @@
 </body>
 
 </html>
+
 
 
