--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <div class="home-content">
             <h1>Hi, It's <span>Gaurav Nishad</span></h1>
             <h3 class="text-animation">I'm a <span></span></h3>
-            <p>"MMotivated and detail-oriented B.Tech graduate looking for a good positioning in IT Companies for Web Developer and Data Engineering.
+            <p>Motivated and detail-oriented B.Tech graduate looking for a good positioning in IT Companies for Web Developer and Data Engineering.
                 Eager to apply my skills like Excel, SQL ,Power BI etc. skills developed through academic projects and internships. 
-                Dedicated to contribute to the success of the Company by my fresh ideas, a strong work ethic, and a passion for continuous learning."</p>
+                Dedicated to contribute to the success of the Company by my fresh ideas, a strong work ethic, and a passion for continuous learning.</p>
 
             <div class="social-icons">
                 <a href="https://github.com/dashboard"><i class='bx bxl-github'></i></a>
@@ -93,10 +93,10 @@
                     <h3>Internship</h3>
                     <p>
                     <ul>
+                        <li>QSpider (Data Analyst)</li>
                         <li>Data Engineering (Virtual)</li>
                         <li>CISCO Networking Academy Responsibility(Virtual)</li>
-                        <li>Juniper Networking (Virtual)</li>
-                        <li>Deloitte Forage (Virtual)</li>
+                        <li>Web Development</li>
                         <li>VForm .Pvt .Ltd. (5 months)</li>
                     </ul>
                     </p>
@@ -237,6 +237,7 @@
 </body>
 
 </html>
+
 
 
 
