--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
 
             <div class="btn-group">
-                <a href="Gaurav_CV" download="" class="btn">Hire</a>
+                <a href="Gaurav_Resume_.pdf" download="" class="btn">Hire</a>
                 <a href="tel:8709700640" class="btn">Contact</a>
             </div>
         </div>
@@ -237,6 +237,7 @@
 </body>
 
 </html>
+
 
 
 
