--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                 Dedicated to contribute to the success of the Company by my fresh ideas, a strong work ethic, and a passion for continuous learning.</p>
 
             <div class="social-icons">
-                <a href="https://github.com/dashboard"><i class='bx bxl-github'></i></a>
+                <a href="https://github.com/gauravni/my-portfolio.git"><i class='bx bxl-github'></i></a>
                 <a href="https://www.instagram.com/gauravnishad5339?igsh=MTF0ZnRveThlenoyMQ=="><i
                         class='bx bxl-instagram-alt'></i></a>
                 <a href="https://x.com/gauravn00138941?t=fgJPEJgrSW8TdIV37rEayg&s=08"><i class='bx bxl-twitter'></i></a>
-                <a href="www.linkedin.com/in/gaurav-nishad-8a0641215"><i class='bx bxl-linkedin-square'></i></a>
+                <a href="www.linkedin.com/in/gaurav-kumar-nishad-8a0641215"><i class='bx bxl-linkedin-square'></i></a>
             </div>
 
             <div class="btn-group">
@@ -237,6 +237,7 @@
 </body>
 
 </html>
+
 
 
 
